Fix overflow issue in Firefox

--- a/src/main.css
+++ b/src/main.css
@@ -669,6 +669,10 @@ input[type="text"].flash {
     outline: none;
 }
 
+.panel .large {
+    white-space: nowrap;
+}
+
 .panel .large input[type="radio"] {
     width: 72px;
     height: 64px;
